--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "author": "Wasek Billah",
   "license": "ISC",
   "dependencies": {
-    "immer": "^10.1.1"
+    "immer": "^10.1.1",
+    "react-inlinesvg": "^4.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.23.7",
